@startuml Policies
!include _style.puml

title Policies — Interfaces, Config Structs & Implementations

package "Password Policy" {

    interface IPasswordPolicy {
        + Validate(rawPassword string) : (ValidatedPassword, error)
    }

    class PasswordPolicyConfig <<Config>> {
        + MinLength : uint8
        + MaxLength : uint8
        + RequireUpper : bool
        + RequireNumber : bool
        + RequireSpecial : bool
    }

    class passwordPolicy <<Policy>> {
        - minLength : uint8
        - maxLength : uint8
        - requireUpper : bool
        - requireNumber : bool
        - requireSpecial : bool
        __
        + {static} NewPasswordPolicy(cfg PasswordPolicyConfig) : IPasswordPolicy
        + Validate(password string) : (ValidatedPassword, error)
    }

    IPasswordPolicy <|.. passwordPolicy
    PasswordPolicyConfig ..> passwordPolicy : configures
}

package "Registration Policy" {

    interface IRegisterPolicy {
        + Validate(email Email) : error
    }

    class RegisterPolicyConfig <<Config>> {
        + AllowPublic : bool
        + BlockedDomains : []string
    }

    class registerPolicy <<Policy>> {
        - allowPublicSignUp : bool
        - blockedDomains : []string
        __
        + {static} NewRegisterPolicy(cfg RegisterPolicyConfig) : IRegisterPolicy
        + Validate(email Email) : error
    }

    IRegisterPolicy <|.. registerPolicy
    RegisterPolicyConfig ..> registerPolicy : configures
}

package "Session Policy" {

    interface ISessionPolicy {
        + GetSessionLifetime() : time.Duration
        + GetMaxActiveSessions() : int
    }

    class SessionPolicyConfig <<Config>> {
        + Lifetime : time.Duration
        + MaxActive : uint8
    }

    class sessionPolicy <<Policy>> {
        - lifetime : time.Duration
        - maxActive : uint8
        __
        + {static} NewSessionPolicy(cfg SessionPolicyConfig) : ISessionPolicy
        + GetSessionLifetime() : time.Duration
        + GetMaxActiveSessions() : int
    }

    ISessionPolicy <|.. sessionPolicy
    SessionPolicyConfig ..> sessionPolicy : configures
}

package "Access Policy" {

    interface IAccessPolicy {
        + GetAccessLifetime() : time.Duration
    }

    class AccessPolicyConfig <<Config>> {
        + Lifetime : time.Duration
    }

    class accessPolicy <<Policy>> {
        - lifetime : time.Duration
        __
        + {static} NewAccessPolicy(cfg AccessPolicyConfig) : IAccessPolicy
        + GetAccessLifetime() : time.Duration
    }

    IAccessPolicy <|.. accessPolicy
    AccessPolicyConfig ..> accessPolicy : configures
}

package "Recovery Policy" {

    interface IRecoveryPolicy {
        + GetRecoveryTokenLifetime() : time.Duration
    }

    class RecoveryPolicyConfig <<Config>> {
        + Lifetime : time.Duration
    }

    class recoveryPolicy <<Policy>> {
        - lifetime : time.Duration
        __
        + {static} NewRecoveryPolicy(cfg RecoveryPolicyConfig) : IRecoveryPolicy
        + GetRecoveryTokenLifetime() : time.Duration
    }

    IRecoveryPolicy <|.. recoveryPolicy
    RecoveryPolicyConfig ..> recoveryPolicy : configures
}

package "Activation Policy" {

    interface IActivationPolicy {
        + RequiresEmailActivation() : bool
        + GetActivationTokenLifetime() : time.Duration
    }

    class ActivationPolicyConfig <<Config>> {
        + RequireEmail : bool
        + TokenLifetime : time.Duration
    }

    class activationPolicy <<Policy>> {
        - requireEmail : bool
        - tokenLifetime : time.Duration
        __
        + {static} NewActivationPolicy(cfg ActivationPolicyConfig) : IActivationPolicy
        + RequiresEmailActivation() : bool
        + GetActivationTokenLifetime() : time.Duration
    }

    IActivationPolicy <|.. activationPolicy
    ActivationPolicyConfig ..> activationPolicy : configures
}

package "Login Policy" {

    interface ILoginPolicy {
        + GetMaxAttempts() : int
        + GetLockoutDuration() : time.Duration
    }

    class LoginPolicyConfig <<Config>> {
        + MaxAttempts : int
        + LockoutDuration : time.Duration
    }

    class loginPolicy <<Policy>> {
        - maxAttempts : int
        - lockoutDuration : time.Duration
        __
        + {static} NewLoginPolicy(cfg LoginPolicyConfig) : ILoginPolicy
        + GetMaxAttempts() : int
        + GetLockoutDuration() : time.Duration
    }

    ILoginPolicy <|.. loginPolicy
    LoginPolicyConfig ..> loginPolicy : configures
}

@enduml
